--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,22 +13,27 @@ spring:
     url: jdbc:oracle:thin:@112.35.32.77:1532:jd3
     username: s4i_purchase_project
     password: 'S4#scm.s01'
-#  datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    schema: classpath:db/schema-mysql.sql
-#    data: classpath:db/data-mysql.sql
-#    url: jdbc:mysql:///test?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
-#    username: root
-#    password: 123456
+  #  datasource:
+  #    driver-class-name: com.mysql.cj.jdbc.Driver
+  #    schema: classpath:db/schema-mysql.sql
+  #    data: classpath:db/data-mysql.sql
+  #    url: jdbc:mysql:///test?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
+  #    username: root
+  #    password: 123456
   servlet:
     multipart:
       max-request-size: 10MB
       max-file-size: 10MB
   thymeleaf:
     cache: true
+  devtools:
+    restart:
+      enabled: true
 
 mybatis-plus:
-  mapper-locations: classpath*:mapper/*.xml
+  mapper-locations: classpath*:mapper/*/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 # Logger Config
 logging:
   level:
